crates/biome_js_parser/tests/js_test_suite/error/property_assignment_target_err_1.js
// here we have an invalid object member name '%'
({%: y} = {})

// here we have invalid object member name
({
	params: { [paramName: string]: number } = {}
})
